# runlabs42-saas

./: .env.local.example  .eslintrc.json  .gitignore  .npmrc  .pnpmrc  ADMIN_PANEL.md  DEVELOPMENT.md  PHASE-1-SUMMARY.md  README.md  REVIEW.md  SPECKIT_GUIDE.md  SPECKIT_IMPLEMENTATION.md  TEMPLATES.md  index.html  install.sh  next.config.mjs  package.json  playwright.config.ts  playwright.studio.config.ts  pnpm-lock.yaml  sentry.client.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.mts
agents/design-orchestrator/: README.md  agent.py  deploy.py  orchestrator_agent.py  prompts.py  pyproject.toml  requirements.txt
agents/design-orchestrator/design_orchestrator/: __init__.py  engine.py
agents/design-orchestrator/installation_scripts/: install_orchestrator.sh
agents/design-orchestrator/vertex_agent_pkg/: orchestrator_agent.py
docs/: DEPLOY-VERCEL.md  GENAI-APP-BUILDER-TRIAL.md  ORQUESTADOR-PAUTAS-STITCH.md  PENDIENTES.md  PREVIEW.md  STUDIO-DESIGN.md  STUDIO-MOBILE.md
figma-plugin/: README.md  code.js  manifest.json  ui.html
scripts/: apply-migration-018.mjs  apply-migration-019.mjs  apply-migration-020.mjs  apply-migration-021.mjs  auto-install-magento-playwright.mjs  build.mjs  check-design-preview-csp.mjs  check-genai-trial-billing.mjs  check-oauth-env.mjs  check-vertex-env.mjs  configure-installed-apps-and-build-links.mjs  copy-monaco.mjs  deploy-design-agent-studio.mjs  dev-clean.sh  e2e-publish-site.mjs  ensure-dev-next.mjs  finalize-installers-playwright.mjs  finish-initial-setup-all-apps.mjs  install.mjs  preload-server-only.mjs  (+24 more)
(+1049 files in other folders)
